Poubelle qui supprime toute les taches

--- a/ToDoListV2/todolistv2.html
+++ b/ToDoListV2/todolistv2.html
@@ -21,6 +21,7 @@
             <ul id="div-list">
                 
             </ul>
+            <img src="images/poubelle.png" alt="" class="supprimetout ">
         </div>
     </div>
 </body>
